--- a/monitor/www/main.css
+++ b/monitor/www/main.css
@@ -10,6 +10,13 @@ body {
   height: 100vh;
 }
 
+#overlay {
+  left: 0.5em;
+  top: 0.5em;
+  max-width: calc(100vw - 0.5em - 5em);
+  position: absolute;
+}
+
 .modal-overlay {
   background: rgba(200, 200, 200, 0.8);
   top: 0;
@@ -21,4 +28,20 @@ body {
   text-align: center;
   padding-top: 4em;
   font-size: 2em;
+}
+
+.btn {
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  padding: 2px;
+  line-height: 1.4em;
+}
+
+.btn > div {
+  background: rgba(0, 60, 136, 0.5);
+  color: white;
+  margin: 1px;
+  padding-left: 0.4em;
+  padding-right: 0.4em;
+  max-width: 300px;
 }
