monitor: tweak display of stored items

--- a/monitor/src/main/resources/www/layout.css
+++ b/monitor/src/main/resources/www/layout.css
@@ -57,6 +57,7 @@ body {
   vertical-align: middle;
   height: 1.8em;
   border: 2px solid white;
+  margin-right: 0.2em;
 }
 .team.a {
   background: #0072b2;
